# stevedore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.ru.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
assets/: demo.tape
src/: app.rs  error.rs  event.rs  main.rs  util.rs
src/docker/: actions.rs  logs.rs  mod.rs  model.rs  stats.rs
src/ui/: confirm.rs  containers.rs  detail.rs  help.rs  logs.rs  mod.rs
