[package]
name = "stevedore"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "A super-lightweight TUI for monitoring Docker containers and logs"
authors = ["Ilia Proshin <ilia.proshin.dev@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/cclxxi/stevedore"
homepage = "https://github.com/cclxxi/stevedore"
readme = "README.md"
keywords = ["docker", "tui", "monitoring", "containers", "logs"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/assets"]

[dependencies]
anyhow = "1.0.102"
bollard = "0.21.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-stream = "0.1.18"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
